--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,8 @@ a {
     color: white;
     background-color: #0061ff;
     padding: 5px 10px;
+    text-align: center;
+    display: inline-block;
 }
 
 /*-----------CLASSES-----------*/
@@ -152,6 +154,10 @@ nav ul li a {
     padding: 30px 0;
 }
 
+.hero-bg .button-blue {
+    width: 50%;
+}
+
 header .container-large {
     transform: translateY(100px);
 }
@@ -159,30 +165,34 @@ header .container-large {
 /*---MAIN---*/
 
 .row .col_3_9 {
-    padding: 10px;
+    padding: 20px;
 }
 
 .offer form {
-    padding: 40px 0 30px;
+    padding: 40px 20px 30px;
+}
+
+.offer h2 {
+    padding-left: 20px;
 }
 
 form label {
     padding: 0 20px 0 5px;
 }
 
-.border {
+.border-height {
     border: 1px solid #a9a9a9;
+    min-height: 1000px;
 }
 
 .col-title {
     text-align: center;
     border-bottom: 1px solid #a9a9a9;
-    width: 100%;
     padding: 10px 0;
 }
 
 .col-text {
-    padding: 20px;
+    padding: 15px;
 }
 
 .col-text h4 {
@@ -223,7 +233,29 @@ form label {
     color: #0061ff;
 } 
 
+.border-margin {
+    border: 1px solid #a9a9a9;
+    margin: 40px 20px 0;
+}
 
+.border-margin .row {
+    padding: 20px;
+}
 
+.border-margin .col_3_9 {
+    padding: 0;
+}
+
+.border-margin h3 {
+    padding-bottom: 20px;
+}
+
+.border-margin h4 {
+    padding-bottom: 20px;
+}
+
+.border-margin .button-blue {
+    width: 100%;
+}
 
 
