Finito div partners

--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,15 @@ a {
     display: inline-block;
 }
 
+.button-white {
+    color: black;
+    background-color: white;
+    border: 1px solid black;
+    padding: 5px 10px;
+    text-align: center;
+    display: inline-block;
+}
+
 /*-----------CLASSES-----------*/
 /*-----------CLASSES-----------*/
 
@@ -235,7 +244,7 @@ form label {
 
 .border-margin {
     border: 1px solid #a9a9a9;
-    margin: 40px 20px 0;
+    margin: 50px 20px 100px;
 }
 
 .border-margin .row {
@@ -258,4 +267,19 @@ form label {
     width: 100%;
 }
 
+.partners img {
+    max-width: 100%;
+}
+
+.partners .col_4_9 {
+    padding-left: 20px;
+}
+
+.partners h3, .partners p {
+    padding: 20px 0 20px;
+}
+
+.partners a {
+    margin-top: 20px;
+}
 
