--- a/css/style.css
+++ b/css/style.css
@@ -177,13 +177,15 @@ header .container-large {
     padding: 20px;
 }
 
-.offer form {
-    padding: 40px 20px 30px;
+.neg-margin {
+    margin-left: -20px;
+    margin-right: -20px;
 }
 
-.offer h2 {
-    padding-left: 20px;
+.offer form {
+    padding: 40px 0 30px;
 }
+
 
 form label {
     padding: 0 20px 0 5px;
@@ -249,7 +251,7 @@ form label {
 
 .border-margin {
     border: 1px solid #a9a9a9;
-    margin: 50px 20px 100px;
+    margin: 50px 0px 100px;
 }
 
 .border-margin .row {
