--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ a {
     max-width: 1010px;
     width: 100%;
     margin: auto;
-    margin-top: 200px;
+    padding-top: 150px;
 }
 
 .row:after {
@@ -110,6 +110,39 @@ a {
     padding: 5px 10px;
     text-align: center;
     display: inline-block;
+}
+
+.bg-green {
+    background-color: #a2d39b;
+    border: 10px solid #d0e9cd
+}
+
+.bg-purple {
+    background-color: #61082b;
+}
+
+.bg-blue {
+    background-color: #0093ce;
+}
+
+.bg-red {
+    background-color: #ff1c1c;
+}
+
+.bg-wine {
+    background-color: #d5001f;
+}
+
+.bg-sky {
+    background-color: #b4d0e7;
+}
+
+.bg-sea {
+    background-color: #0d2481;
+}
+
+.bg-yellow {
+    background-color: #ffd830;
 }
 
 /*-----------CLASSES-----------*/
@@ -292,6 +325,7 @@ form label {
 
 .operations {
     margin-top: 100px;
+    margin-bottom: 100px
 }
 
 .operations .col_3_9{
@@ -306,6 +340,92 @@ form label {
     padding: 20px 0 40px;
 }
 
-.lol {
+.i-saw-you {
     text-decoration: underline;
-} 
+}
+
+.box-title {
+    
+}
+
+.box-title h2{
+    max-width: 57%;
+}
+
+.box-title a {
+    display: inline-block;
+    color: #0061ff;
+    text-decoration: underline;
+    padding: 40px 0 40px;
+}
+
+.box-container {
+    background-color: #f5f5f5;
+}
+
+.box-container-aside {
+    float: left;
+    width: 30%;
+}
+
+.single-box {
+    float: left;
+    width: 50%;
+    height: calc(30vw / 2);
+    text-align: center;
+}
+
+.single-box img {
+    width: 50%;
+    height: 100%;
+    filter: invert(1);
+}
+
+.bg-blue img {
+    height: 10%;
+    position: relative;
+    top: calc(50% - 23.4px / 2);
+}
+
+.box-container-center {
+    float: left;
+    width: 40%;
+    padding: 40px;
+    max-height: 30vw;
+    overflow-y: auto;
+}
+
+.box-container-center img {
+    width: 30%;
+}
+
+.box-container-center hr {
+    width: 10%;
+    border: 1px solid #a9a9a9;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.author {
+    padding-top: 40px;
+}
+
+.bg-sky .container {
+    padding-bottom: 150px;
+}
+
+.bg-sky h2 {
+    color: #61082b;
+}
+
+.bg-sky .col_4_9 {
+    text-align: right;
+}
+
+.bg-sky a {
+    border: none;
+    padding: 10px 30px;
+}
+
+
+
