--- a/css/style.css
+++ b/css/style.css
@@ -427,5 +427,26 @@ form label {
     padding: 10px 30px;
 }
 
+.freq {
+    margin-bottom: 100px;
+}
+
+.freq h3 {
+    padding-bottom: 40px;
+}
+
+.freq .row {
+    border-top: 1px solid #a9a9a9;
+    padding: 20px 0;   
+}
+
+.freq .row:last-child {
+    border-bottom: 1px solid #a9a9a9;
+}
+
+.freq .col_3_9 {
+    padding: 0 20px 0 0;
+    text-align: right;
+}
 
 
