--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,12 @@ a {
     padding: 5px 10px;
     text-align: center;
     display: inline-block;
+    transition: 0.5s;
+}
+
+.button-blue:hover {
+    background-color: #0d2481;
+    box-shadow: 0 5px #0061ff;
 }
 
 .button-white {
@@ -115,6 +121,11 @@ a {
     padding: 5px 10px;
     text-align: center;
     display: inline-block;
+    transition: 1s;
+}
+
+.button-white:hover {
+    box-shadow: 0 5px #0061ff;
 }
 
 .bg-green {
@@ -181,6 +192,10 @@ nav ul li a {
     display: inline-block;
 }
 
+nav ul li a:not(.button-blue):hover {
+    color: #0061ff;
+}
+
 .nav-sx {
     float: left;
 }
@@ -201,6 +216,28 @@ nav ul li a {
 .hero-bg p{
     padding: 30px 0;
 }
+
+.hero-bg h2 {
+    animation: arrow-move 2s linear infinite;
+} 
+
+@keyframes arrow-move {
+    0%{
+        transform: translateY(0px);
+    }
+    25%{
+        transform: translateY(20px);
+    }
+    50%{
+        transform: translateY(40px);
+    }
+    75%{
+        transform: translateY(20px);
+    }
+    100%{
+        transform: translateY(0px);
+    }
+} 
 
 header .container-large {
     transform: translateY(100px);
@@ -452,12 +489,8 @@ form label {
     display: none;
 }
 
-.freq i:active p {
+.freq .row:active p {
     display: block;
-}
-
-.freq i:active{
-    color: #0061ff;
 }
 
 footer .container {
