--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ nav ul li a:not(.button-blue):hover {
 
 .hero-bg {
     background-color: #b4d0e7;
-    margin-top: 46px;
+    margin-top: 52.6px;
 }
 
 .hero-bg h1 {
@@ -214,7 +214,7 @@ nav ul li a:not(.button-blue):hover {
 }
 
 .hero-bg p{
-    padding: 30px 0;
+    padding: 20px 0;
 }
 
 .hero-bg h2 {
@@ -258,9 +258,12 @@ header .container-large {
     padding: 40px 0 30px;
 }
 
-
 form label {
     padding: 0 20px 0 5px;
+}
+
+input {
+
 }
 
 .border-height {
